<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uri"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/input_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_uri"/>

        <TextView
            android:id="@+id/client_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_id"
            android:textSize="25sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_client_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_client_id"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/input_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_user_name"/>

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_password"/>

        <Button
            android:id="@+id/button_connect"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/button_connect" />

        <TextView
            android:id="@+id/sub_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sub_topic"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/input_sub_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_sub_topic"/>

        <Button
            android:id="@+id/button_sub"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/button_sub" />

        <Button
            android:id="@+id/button_unsub"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/button_unsub" />

        <TextView
            android:id="@+id/pub_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pub_topic"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/input_pub_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_pub_topic"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/input_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_message"/>

        <Button
            android:id="@+id/button_pub"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/button_pub" />
    </LinearLayout>

</ScrollView>
